[package]
name = "clipboard"
version = "0.5.0"
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]
description = "rust-clipboard is a cross-platform library for getting and setting the contents of the OS-level clipboard."
repository = "https://github.com/aweinstock314/rust-clipboard"
license = "MIT / Apache-2.0"
keywords = ["clipboard"]
edition = "2021"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5", features = ["std"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten"))))'.dependencies]
x11-clipboard = { git = "https://github.com/songokas/x11-clipboard.git" }
# x11-clipboard = { path = "../x11-clipboard" }
wl-clipboard-rs = "0.9"

[dev-dependencies]
serial_test = "3.2.0"
