[package]
name = "clipboard"
version = "0.6.1"
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]
description = "rust-clipboard is a cross-platform library for getting and setting the contents of the OS-level clipboard."
repository = "https://github.com/songokas/rust-clipboard"
license = "MIT / Apache-2.0"
keywords = ["clipboard"]
edition = "2021"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5", features = ["std", "monitor"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSPasteboard",
    "NSPasteboardItem",
    "NSImage",
] }
objc2-foundation = { version = "0.2", features = [
    "block2",
    "NSEnumerator",
    "NSArray",
    "NSString",
    "NSData",
    "NSDictionary",
    "NSRange",
    "NSURLProtocol",
] }


[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten"))))'.dependencies]
x11-clipboard = { git = "https://github.com/songokas/x11-clipboard.git", tag = "0.10.1" }
# x11-clipboard = { path = "../x11-clipboard" }
wl-clipboard-rs = "0.9"

[dev-dependencies]
serial_test = "3.2.0"
